--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -1,4 +1,5 @@
 .header {
+  position: relative;
   padding: 1.25rem;
   background: url(../assets/images/headerBg.webp) no-repeat;
   background-size: cover;
@@ -12,4 +13,44 @@
 .logo {
   width: 50px;
   height: auto;
+}
+.mobile_menu {
+  width: 90vw;
+  max-width: 500px;
+  background-color: rgba(248, 248, 248, .5);
+  padding: 1rem;
+  position: absolute;
+  left: 5%;
+  top: -100%;
+  border-radius: 1rem;
+  transition: top .6s ease-in-out;
+  height: 140px;
+}
+.mobile_menu.active {
+  top: 15%;
+}
+.mobile_menu ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+.mobile_menu ul a {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 1.125rem;
+  font-weight: 600;
+  color:  white;
+}
+.mobile_menu li {
+  transition: transform ease-in-out .3s;
+  background-color: rgba(0, 0, 0, .9);
+  padding: .25rem;
+  border-radius: .25rem;
+}
+.mobile_menu ul li:hover {
+  cursor: pointer;
+  transform: scale(1.1);
 }
