--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -4,6 +4,8 @@
   background: url(../assets/images/headerBg.webp) no-repeat;
   background-size: cover;
   min-height: 500px;
+  display: flex;
+  flex-direction: column;
 }
 .header_top {
   display: flex;
@@ -62,4 +64,48 @@ h1 {
   text-align: center;
   margin-top: 10rem;
   background-color: rgba(248, 248, 248, .5);
+}
+.icon {
+  width: 25px;
+  height: auto;
+}
+.cart_container {
+  margin-top: 1rem;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: .5rem;
+  background-color: rgba(248, 248, 248, .5);
+  padding: .5rem;
+  border-radius: .25rem;
+  color: #001f3f;
+}
+.flex_grp {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+@media (min-width: 768px) {
+  .header {
+    padding: 2.5rem;
+  }
+  .mobile_menu {
+    width: auto;
+    background-color: transparent;
+    padding: 0;
+    position: unset;
+    height: unset;
+  }
+  .mobile_menu ul {
+    flex-direction: row;
+  }
+  h1 {
+    max-width: 400px;
+    align-self: center;
+    margin-top: 5rem;
+  }
+  .cart_container {
+    align-self: flex-end;
+  }
 }
