--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,9 @@ button {
 p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
 }
+ul {
+  list-style: none;
+}
 body {
   min-height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
