--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -6,8 +6,8 @@
   padding: 1.25rem;
   background-color: rgb(209, 209, 209);
 }
-
 .item {
+  position: relative;
   background-color: white;
   padding: 1rem;
   border-radius: .5rem;
@@ -42,6 +42,16 @@
   clip-path: 
   polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
 }
-
-
-
+.arrowRight,
+.arrowLeft {
+  position: absolute;
+  top: 40%;
+  width: 50px;
+  height: auto;
+}
+.arrowLeft {
+  left: 1%;
+}
+.arrowRight {
+  right: 1%;
+}
